--- a/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
@@ -28,17 +28,17 @@
                 </div>
                 <div style="position: relative;" hidden id="otherCoachingDetailsField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrOtherDetails">Other Coaching Details:</label>
-                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" maxlength="25" placeholder="Enter other coaching details..." onchange="validateForm()"/>
+                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" maxlength="25" placeholder="Enter other coaching details..." onchange="validateForm()" autocomplete="off"/>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Message To Agent:</label>
                     <textarea id="wi_coachCorrComments" name="wi_coachCorrComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
-                        placeholder="Enter message...">{wi_coachCorrComments}</textarea>
+                        placeholder="Enter message..." autocomplete="off">{wi_coachCorrComments}</textarea>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrNVComments">Non-Visible Message:</label>
                     <textarea id="wi_coachCorrNVComments" name="wi_coachCorrNVComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
-                        placeholder="Enter internal comments not visible to agent receiving coaching...">{wi_coachCorrNVComments}</textarea>
+                        placeholder="Enter internal comments not visible to agent receiving coaching..." autocomplete="off">{wi_coachCorrNVComments}</textarea>
                 </div>
             </div>
             <div style="display: flex;gap: 16px;justify-content: flex-end;margin-top: 16px;">
