--- a/cxone-work-item-form/to_host/cwf_work_item copy.html
+++ b/cxone-work-item-form/to_host/cwf_work_item copy.html
@@ -188,18 +188,10 @@
             </div>
         </footer>
     </body>
-    <!-- <script type="module"
-        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/cwf_work_item.js"></script> -->
+    <script type="module"
+        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/cwf_work_item.js"></script>
     <!-- <script type="module"
         src="./cwf_work_item.js"></script> -->
-    
-    <!-- <script type="module"
-        src="https://author-holland-america-stage65.adobecqms.net/assetdetails.html/content/dam/nice/all/test-wi-scripts/cwf_work_item.js"></script> -->
-
-    <script type="module"
-        src="https://aem-stage.hollandamerica.com/content/dam/nice/all/test-wi-scripts/cwf_work_item.js">
-
-        </script>
 
     </html>
 </data>
