feat: add code refactor change

--- a/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
@@ -6,21 +6,8 @@
                 <div style="position: relative;">
                     <p style="margin-bottom: 6px;font-weight: 500;font-size: 16px;color: black; ">Concern Item/s:</p>
                     <div>
-                        <p><input type="checkbox" id="lacksBookingHistoryComments" value="Lacks Booking History Comments" name="wi_coachCorrReason" onchange="validateForm()"> Lacks
-                            Booking
-                            History Comments</p>
-                        <p><input type="checkbox" id="lacksCommentsInCancelWaiverScreen" value="Lacks Comments In Cancel Waiver Screen" name="wi_coachCorrReason" onchange="validateForm()">
-                            Lacks
-                            Comments in Cancel Waiver Screen</p>
-                        <p><input type="checkbox" id="lacksCommentsOnManualAdjScreen" value="Lacks Comments On Manual Adj Screen" name="wi_coachCorrReason" onchange="validateForm()"> Lacks
-                            Comments on Manual Adj Screen</p>
-                        <p><input type="checkbox" id="lacksFCCHistoryComments" value="Lacks FCC History Comments" name="wi_coachCorrReason" onchange="validateForm()"> Lacks FCC
-                            History
-                            Comments</p>
-                        <p><input type="checkbox" id="outsideOfPolicyProcedure" value="Outside Of Policy And/Or Procedure" name="wi_coachCorrReason" onchange="validateForm()"> Outside of
-                            Policy
-                            and/or Procedure</p>
-                        <p><input type="checkbox" id="dataEntryError" value="Data Entry Error" name="wi_coachCorrReason" onchange="validateForm()"> Data Entry Error</p>
+                        <p><input type="checkbox" id="lacksCommentsInCancelWaiverScreen" value="CWF Comments" name="wi_coachCorrReason" onchange="validateForm()"> Lacks Cancel Waiver Screen Comments</p>
+                        <p><input type="checkbox" id="outsideOfPolicyProcedure" value="Outside Policy/Procedure" name="wi_coachCorrReason" onchange="validateForm()"> Outside of Policy and/or Procedure</p>
                         <p><input type="checkbox" id="otherCoaching" value="Other Coaching" name="wi_coachCorrReason" onclick="
                         document.getElementById('otherCoachingDetailsField').hidden = !this.checked;validateForm();
                         "> Other</p>
