--- a/cxone-work-item-form/to_host/TEST CORRECTION REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST CORRECTION REQUEST.html
@@ -5,10 +5,7 @@
             <div style="display: grid;gap: 24px 16px;margin-bottom: 16px;">
                 <div style="position: relative;">
                     <div>
-                        <p><input type="checkbox" id="missingDocumentation" value="Missing Documentation" name="wi_coachCorrReason" onchange="validateForm()"> Missing Documentation
-                        </p>
-                        <p><input type="checkbox" id="incorrectCancellation" value="Incorrect Cancellation" name="wi_coachCorrReason" onchange="validateForm()"> Incorrect
-                            Cancellation</p>
+                        <p><input type="checkbox" id="bookingNotation" value="Booking Notation" name="wi_coachCorrReason" onchange="validateForm()"> Booking is not appropriately noted</p>
                         <p><input type="checkbox" id="otherCorrection" value="Other Correction" name="wi_coachCorrReason" onclick="
                         document.getElementById('otherCorrectionField').hidden = !this.checked;validateForm();
                         "> Other</p>
