--- a/cxone-work-item-form/to_host/TEST HISTORY.html
+++ b/cxone-work-item-form/to_host/TEST HISTORY.html
@@ -1,6 +1,9 @@
 <data>
   <div style="position: fixed;inset: 0;background: rgba(0,0,0,0.45);display: flex;align-items: center;justify-content: center;z-index: 9999;">
     <div style="width: 95%;max-width: 1100px;background: #ffffff;border-radius: 6px;padding: 20px;box-shadow: 0 8px 24px rgba(0,0,0,0.2);">
+      <input type="text" hidden id="env" name="env" value="{global:Env}" />
+      <input type="text" hidden id="review_item_index" name="review_item_index" value="{global:review_item_index}" />
+      <input type="text" hidden id="workitemid" name="workitemid" value="{workitemid}" />
       <div style="display: flex;align-items: center;justify-content: space-between;margin-bottom: 16px;">
         <div style="font-size: 16px;font-weight: bold;color: {global:primaryColor};text-transform: uppercase;">
           Work Item History
@@ -11,7 +14,7 @@
         </button>
       </div>
 
-      <div style="overflow-x: auto;">
+      <div style="overflow-x: auto;" id="historyTableContainer">
         <table class="history-table" style="width: 100%; border-collapse: collapse; font-size: 13px;">
             <thead id="tableHeader" style="background: {global:primaryColor}; color: white; position: sticky; top: 0; z-index: 10;">
             </thead>
