feat: add code refactor change

--- a/cxone-work-item-form/to_host/work_item.html
+++ b/cxone-work-item-form/to_host/work_item.html
@@ -25,6 +25,7 @@
         <main id="wiContainer" class="main-container" style="display: grid;grid-template-columns: 280px 1fr;gap: 8px;flex: 1;max-width: 1800px; margin: 0 auto;width: 100%;">
             <input type="text" hidden id="wi_item_type" name="wi_item_type" value="{wi_item_type}" />
             <input type="text" hidden id="workitemid" name="workitemid" value="{workitemid}" />
+            <input type="text" hidden id="wi_bookingNumber" name="wi_bookingNumber" />
             <aside style="display: flex;flex-direction: column;gap: 8px; padding: 8px;">
                 <div style="background: #ffffff;border: 1px solid #ccc;border-radius: 4px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                     <input type="text" hidden id="wi_historyAvailable" name="wi_historyAvailable" value="{wi_historyAvailable}" />
@@ -142,7 +143,5 @@
     </body>
     <script type="module"
         src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/work_item.js"></script>
-    <!-- <script type="module"
-        src="./cwf_work_item.js"></script> -->
     </html>
 </data>
