feat: add code fix change

--- a/cxone-work-item-form/to_host/coachingRequest.html
+++ b/cxone-work-item-form/to_host/coachingRequest.html
@@ -4,7 +4,7 @@
             <div style="text-align: center;font-weight: bold;color: {global:primaryColor}; margin-bottom: 16px;text-transform: uppercase;" id="modalTitle">Coaching Event</div>
             <div style="display: grid;gap: 24px 16px;margin-bottom: 16px;">
                 <div style="position: relative;">
-                    <p style="margin-bottom: 6px;font-weight: 500;font-size: 16px;color: black; ">Concern Item/s:</p>
+                    <p style="margin-bottom: 6px;font-weight: 700;font-size: 16px;color: black; ">Item/s to Review:</p>
                     <div>
                         <p><input type="checkbox" id="lacksCommentsInCancelWaiverScreen" value="CWF Comments" name="wi_coachCorrReason" onchange="validateForm()"> Lacks Cancel Waiver Screen Comments</p>
                         <p><input type="checkbox" id="outsideOfPolicyProcedure" value="Outside Policy/Procedure" name="wi_coachCorrReason" onchange="validateForm()"> Outside of Policy and/or Procedure</p>
