--- a/cxone-work-item-form/to_host/correctionRequest.html
+++ b/cxone-work-item-form/to_host/correctionRequest.html
@@ -4,6 +4,7 @@
             <div style="text-align: center;font-weight: bold;color: {global:primaryColor}; margin-bottom: 16px;text-transform: uppercase;" id="modalTitle">Correction Request</div>
             <div style="display: grid;gap: 24px 16px;margin-bottom: 16px;">
                 <div style="position: relative;">
+                    <p style="margin-bottom: 6px;font-weight: 700;font-size: 16px;color: black; ">Item/s to address:</p>
                     <div>
                         <p><input type="checkbox" id="bookingNotation" value="Booking Notation" name="wi_coachCorrReason" onchange="validateForm()"> Booking is not appropriately noted</p>
                         <p><input type="checkbox" id="otherCorrection" value="Other Correction" name="wi_coachCorrReason" onclick="
