feat: add customer support form changes

--- a/cxone-web-customer-support-form/to_host/customer_info_form.html
+++ b/cxone-web-customer-support-form/to_host/customer_info_form.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <script type="module" src="modern_cxone_web_form-2.js"></script>
+    <script type="module" src="customer_info_form.js"></script>
     <div class="card">
         <main>
             <div class="cxone-form-panel" data-tab="customer">
@@ -41,7 +41,6 @@
             </div>
         </div>
     </div>
-    <!-- <script type="module" src="modern_cxone_web_form-2.js"></script> -->
     <script>
 
         const tabs = document.querySelectorAll(".cxone-tab");
