--- a/cxone-web-customer-support-form/to_host/tnc_form.html
+++ b/cxone-web-customer-support-form/to_host/tnc_form.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script type="module" src="modern_cxone_web_form-2.js"></script>
+    <script type="module" src="tnc_form.js"></script>
     <div class="card">
         <main>        
             <div class="cxone-form-panel" data-tab="termsAndConditions">
@@ -39,7 +39,6 @@
             </div>
         </div>
     </div>
-    <!-- <script type="module" src="modern_cxone_web_form-2.js"></script> -->
     <script>
 
         const tabs = document.querySelectorAll(".cxone-tab");
