--- a/cxone-web-customer-support-form/to_host/customer_booking_info_form.html
+++ b/cxone-web-customer-support-form/to_host/customer_booking_info_form.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <script type="module" src="modern_cxone_web_form-2.js"></script>
+    <script type="module" src="customer_booking_info_form.js"></script>
     <div class="card">
         <main>
 
@@ -50,7 +50,6 @@
             </div>
         </div>
     </div>
-    <!-- <script type="module" src="modern_cxone_web_form-2.js"></script> -->
     <script>
 
         const tabs = document.querySelectorAll(".cxone-tab");
