--- a/cxone-web-customer-support-form/to_host/customer_intent_form.html
+++ b/cxone-web-customer-support-form/to_host/customer_intent_form.html
@@ -5,14 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CXone Web Form - Modern Layout</title>
-    <link rel="stylesheet" href="modern_cxone_web_form-2.css">
-    <!-- <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    /> -->
+    <link rel="stylesheet" href="customer_form.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
@@ -38,7 +32,8 @@
                         <div class="user-group" id="wrongUserGroup">
                             <div class="user-img-wrapper">
                                 <img src="/assets/directGuest1.png" alt="Wrong User" width="80px" height="80px">
-                                <div class="cross-mark"><i class="fa-solid fa-x"></i></div>
+                                <!-- <div class="cross-mark"><i class="fa-solid fa-x"></i></div> -->
+                                <div class="cross-mark">✖</div>
                             </div>
                         </div>
                         <input type="hidden" name="wrongUser" id="wrongUser" value="0" />
