--- a/cxone-web-customer-support-form/to_host/pcc_form.html
+++ b/cxone-web-customer-support-form/to_host/pcc_form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CXone Web Form - Modern Layout</title>
-    <link rel="stylesheet" href="modern_cxone_web_form-2.css">
+    <link rel="stylesheet" href="customer_form.css">
 </head>
 
 <body>
