feat: add CWX work item changes

--- a/cxone-work-item-form/to_host/work_item.html
+++ b/cxone-work-item-form/to_host/work_item.html
@@ -16,7 +16,7 @@
             <input type="text" hidden id="review_item_index" name="review_item_index" value="{global:review_item_index}" />
             <div>
                 <div
-                    style="background-image: url('../assets/logos/holland.svg'); background-size: contain; background-repeat: no-repeat; background-position: center; width: 160px; height: 40px; border-radius: 6px; display: flex; align-items: center; justify-content: center; background-color: transparent; background-size: contain; background-repeat: no-repeat;">
+                    style="background-image: url('../../assets/logos/holland.svg'); background-size: contain; background-repeat: no-repeat; background-position: center; width: 160px; height: 40px; border-radius: 6px; display: flex; align-items: center; justify-content: center; background-color: transparent; background-size: contain; background-repeat: no-repeat;">
                     {global:wi_brand}
                 </div>
             </div>
@@ -143,5 +143,7 @@
     </body>
     <script type="module"
         src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/work_item.js"></script>
+    <!-- <script type="module"
+        src="./work_item.js"></script> -->
     </html>
 </data>
