feat: add CWX work item changes

--- a/cxone-work-item-form/to_host/updateEmployee.html
+++ b/cxone-work-item-form/to_host/updateEmployee.html
@@ -19,10 +19,11 @@
             </div>
             <div style="display: flex;gap: 16px;justify-content: flex-end;margin-top: 16px;">
                 <input type="hidden" name="wi_employeeDetailsStatus" id="wi_employeeDetailsStatus">
+                <input type="hidden" name="wi_enableReskill" id="wi_enableReskill">
                 <button name="submit" onclick="document.getElementById('wi_employeeDetailsStatus').value='cancel';"
                     style="padding: 12px;border-radius: 4px; font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: transparent;color: #666666;border: 1px solid #ccc;"
                     id="cancelModalBtn">Cancel</button>
-                <button name="submit" onclick="document.getElementById('wi_employeeDetailsStatus').value='confirm';"
+                <button name="submit" onclick="document.getElementById('wi_employeeDetailsStatus').value='confirm';document.getElementById('wi_enableReskill').value=1;"
                     style="opacity: .5;padding: 12px;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: not-allowed;text-transform: uppercase;letter-spacing: 0.3px;background: {global:secondaryColor};color: #ffffff;"
                     id="confirmBtn" disabled>Confirm</button>
             </div>
