feat: add customer feeback code refactor changes

--- a/cxone-web-customer-support-form/modern_cxone_web_form-2.html
+++ b/cxone-web-customer-support-form/modern_cxone_web_form-2.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="cxone-tab" data-tab="phoneTypeSmsAuth">
                             <div class="cxone-tab-icon">
-                                <img src="/assets/mediaType4.png" alt="phoneTypeSmsAuth"/>
+                                <img src="/assets/mediaType.png" alt="phoneTypeSmsAuth"/>
                             </div>
                             <div class="cxone-tab-title">Phone Type and SMS authorization</div>
                             <div class="cxone-tab-desc">Phone Type and SMS authorization</div>
@@ -122,7 +122,7 @@
                         </div> -->
                         <div class="cxone-tab" data-tab="termsAndConditions">
                             <div class="cxone-tab-icon">
-                                <img src="/assets/termsAndCond3.png" alt="termsAndConditions"/>
+                                <img src="/assets/termsAndCond.png" alt="termsAndConditions"/>
                             </div>
                             <div class="cxone-tab-title">Terms and conditions</div>
                             <div class="cxone-tab-desc">Terms and conditions</div>
@@ -186,7 +186,7 @@
                                             <div class="field" id="wrongUserField">
                                                 <div class="user-group" id="wrongUserGroup">
                                                     <div class="user-img-wrapper">
-                                                        <img src="/assets/directGuest1.png" class="user-img"
+                                                        <img src="/assets/user.png" class="user-img"
                                                             alt="Wrong User" width="80px" height="80px">
                                                         <!-- <div class="cross-mark"><i class="fa-solid fa-x"></i></div> -->
                                                         <div class="cross-mark">✖</div>
