--- a/cxone-web-customer-support-form/to_host/customer_feedback_form.html
+++ b/cxone-web-customer-support-form/to_host/customer_feedback_form.html
@@ -86,14 +86,14 @@
                             </div>
                             <div class="cxone-tab" data-tab="phoneTypeSmsAuth">
                                 <div class="cxone-tab-icon">
-                                    <img src="/assets/mediaType4.png" alt="phoneTypeSmsAuth"/>
+                                    <img src="/assets/mediaType.png" alt="phoneTypeSmsAuth"/>
                                 </div>
                                 <div class="cxone-tab-title">Phone Type and SMS authorization</div>
                                 <div class="cxone-tab-desc">Phone Type and SMS authorization</div>
                             </div>
                             <div class="cxone-tab" data-tab="termsAndConditions">
                                 <div class="cxone-tab-icon">
-                                    <img src="/assets/termsAndCond3.png" alt="termsAndConditions"/>
+                                    <img src="/assets/termsAndCond.png" alt="termsAndConditions"/>
                                 </div>
                                 <div class="cxone-tab-title">Terms and conditions</div>
                                 <div class="cxone-tab-desc">Terms and conditions</div>
