--- a/cxone-web-customer-support-form/to_host/customer_intent_form.html
+++ b/cxone-web-customer-support-form/to_host/customer_intent_form.html
@@ -35,7 +35,7 @@
                     <div class="field" id="wrongUserField">
                         <div class="user-group" id="wrongUserGroup">
                             <div class="user-img-wrapper">
-                                <img src="/assets/directGuest1.png" alt="Wrong User" width="80px" height="80px">
+                                <img src="/assets/user.png" alt="Wrong User" width="80px" height="80px">
                                 <!-- <div class="cross-mark"><i class="fa-solid fa-x"></i></div> -->
                                 <div class="cross-mark">✖</div>
                             </div>
