feat: add customer feeback code refactor changes

--- a/cxone-web-customer-support-form/to_host/customer_feedback_form1.html
+++ b/cxone-web-customer-support-form/to_host/customer_feedback_form1.html
@@ -47,7 +47,7 @@
                         
                         <div class="field">
                             <div>
-                                <img src="/assets/voyageTypes/worldCruise.png" alt="phoneTypeSmsAuth" width="80px" height="80px"/>
+                                <img src="/cxone-web-customer-support-form/to_host/images/voyageTypes/worldCruise.png" alt="phoneTypeSmsAuth" width="80px" height="80px"/>
                             </div>
                             <div class="loyalty-level"></div>
                         </div>                     
@@ -78,28 +78,28 @@
                         </div>
                         <div class="cxone-tab" data-tab="pcc">
                             <div class="cxone-tab-icon">
-                                <img src="/assets/pcc.png" alt="PCC"/>
+                                <img src="/cxone-web-customer-support-form/to_host/images/pcc.png" alt="PCC"/>
                             </div>
                             <div class="cxone-tab-title">PCC</div>
                             <div class="cxone-tab-desc">PCC</div>
                         </div>
                         <div class="cxone-tab" data-tab="phoneTypeSmsAuth">
                             <div class="cxone-tab-icon">
-                                <img src="/assets/mediaType.png" alt="phoneTypeSmsAuth"/>
+                                <img src="/cxone-web-customer-support-form/to_host/images/mediaType.png" alt="phoneTypeSmsAuth"/>
                             </div>
                             <div class="cxone-tab-title">Phone Type and SMS authorization</div>
                             <div class="cxone-tab-desc">Phone Type and SMS authorization</div>
                         </div>
                         <!-- <div class="cxone-tab" data-tab="manageSubscription">
                             <div class="cxone-tab-icon">
-                                <img src="/assets/manageSubs3.jpg" alt="manageSubscription"/>
+                                <img src="/cxone-web-customer-support-form/to_host/images/manageSubs3.jpg" alt="manageSubscription"/>
                             </div>
                             <div class="cxone-tab-title">Manage subscription</div>
                             <div class="cxone-tab-desc">Manage subscription</div>
                         </div> -->
                         <div class="cxone-tab" data-tab="termsAndConditions">
                             <div class="cxone-tab-icon">
-                                <img src="/assets/termsAndCond.png" alt="termsAndConditions"/>
+                                <img src="/cxone-web-customer-support-form/to_host/images/termsAndCond.png" alt="termsAndConditions"/>
                             </div>
                             <div class="cxone-tab-title">Terms and conditions</div>
                             <div class="cxone-tab-desc">Terms and conditions</div>
@@ -163,7 +163,7 @@
                                             <div class="field" id="wrongUserField">
                                                 <div class="user-group" id="wrongUserGroup">
                                                     <div class="user-img-wrapper">
-                                                        <img src="/assets/user.png" class="user-img"
+                                                        <img src="/cxone-web-customer-support-form/to_host/images/user.png" class="user-img"
                                                             alt="Wrong User" width="80px" height="80px">
                                                         <!-- <div class="cross-mark"><i class="fa-solid fa-x"></i></div> -->
                                                         <div class="cross-mark">✖</div>
@@ -245,18 +245,18 @@
                                             <p>Authorize for Preferences:</p>
                                             <div class="checkbox-group subscription-toggle-group">
                                                 <div class="subscription-type" title="Service/Supoort/Upgrades messages">
-                                                    <img src="/assets/mediaTypes/servicered.png" alt="">
-                                                    <img src="/assets/mediaTypes/servicegreen.png" alt="">
+                                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaTypes/servicered.png" alt="">
+                                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaTypes/servicegreen.png" alt="">
                                                     <!-- <span class="subscription-msg">Service/Supoort/Upgrades messages</span> -->
                                                 </div>
                                                 <div class="subscription-type" title="PCC consultant messages">
-                                                    <img src="/assets/mediaTypes/pccred.png" alt="">
-                                                    <img src="/assets/mediaTypes/pccgreen.png" alt="">
+                                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaTypes/pccred.png" alt="">
+                                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaTypes/pccgreen.png" alt="">
                                                     <!-- <span class="subscription-msg">PCC consultant messages</span> -->
                                                 </div>
                                                 <div class="subscription-type" title="Marketing messages">
-                                                    <img src="/assets/mediaTypes/marketingRed.png" alt="">
-                                                    <img src="/assets/mediaTypes/marketingGreen.png" alt="">
+                                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaTypes/marketingRed.png" alt="">
+                                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaTypes/marketingGreen.png" alt="">
                                                     <!-- <span class="subscription-msg">Marketing messages</span> -->
                                                 </div>
                                             </div>
