--- a/cxone-web-customer-support-form/to_host/customer_feedback_form.html
+++ b/cxone-web-customer-support-form/to_host/customer_feedback_form.html
@@ -48,7 +48,7 @@
                             
                             <div class="field">
                                 <div>
-                                    <img src="/assets/voyageTypes/worldCruise.png" alt="phoneTypeSmsAuth" width="80px" height="80px"/>
+                                    <img src="/cxone-web-customer-support-form/to_host/images/voyageTypes/worldCruise.png" alt="phoneTypeSmsAuth" width="80px" height="80px"/>
                                 </div>
                                 <div class="loyalty-level"></div>
                             </div>                     
@@ -79,21 +79,21 @@
                             </div>
                             <div class="cxone-tab" data-tab="pcc">
                                 <div class="cxone-tab-icon">
-                                    <img src="/assets/pcc.png" alt="PCC"/>
+                                    <img src="/cxone-web-customer-support-form/to_host/images/pcc.png" alt="PCC"/>
                                 </div>
                                 <div class="cxone-tab-title">PCC</div>
                                 <div class="cxone-tab-desc">PCC</div>
                             </div>
                             <div class="cxone-tab" data-tab="phoneTypeSmsAuth">
                                 <div class="cxone-tab-icon">
-                                    <img src="/assets/mediaType.png" alt="phoneTypeSmsAuth"/>
+                                    <img src="/cxone-web-customer-support-form/to_host/images/mediaType.png" alt="phoneTypeSmsAuth"/>
                                 </div>
                                 <div class="cxone-tab-title">Phone Type and SMS authorization</div>
                                 <div class="cxone-tab-desc">Phone Type and SMS authorization</div>
                             </div>
                             <div class="cxone-tab" data-tab="termsAndConditions">
                                 <div class="cxone-tab-icon">
-                                    <img src="/assets/termsAndCond.png" alt="termsAndConditions"/>
+                                    <img src="/cxone-web-customer-support-form/to_host/images/termsAndCond.png" alt="termsAndConditions"/>
                                 </div>
                                 <div class="cxone-tab-title">Terms and conditions</div>
                                 <div class="cxone-tab-desc">Terms and conditions</div>
