--- a/cxone-work-item-form/to_host/correctionRequest.html
+++ b/cxone-work-item-form/to_host/correctionRequest.html
@@ -14,7 +14,7 @@
                 </div>
                 <div style="position: relative;" hidden id="otherCorrectionField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrOtherDetails">Other Correction:</label>
-                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" maxlength="25" placeholder="Enter other correction details..." onchange="validateForm()" autocomplete="off"/>
+                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" placeholder="Enter other correction details..." onchange="validateForm()" autocomplete="off"/>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_corrDate">Correction Date:</label>
