--- a/cxone-work-item-form/to_host/cwf_work_item.html
+++ b/cxone-work-item-form/to_host/cwf_work_item.html
@@ -15,7 +15,7 @@
             <div>
                 <div
                     style="background-image: url('../assets/logos/holland.svg'); background-size: contain; background-repeat: no-repeat; background-position: center; width: 160px; height: 40px; border-radius: 6px; display: flex; align-items: center; justify-content: center; background-color: transparent; background-size: contain; background-repeat: no-repeat;">
-                    {global:wi_brand}
+                    {global:api_brand}
                 </div>
             </div>
         </header>
@@ -141,7 +141,7 @@
         </main>
         <footer style="background: #e8f0f6;padding: 16px 24px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);flex-shrink: 0;border-top: 3px solid {global:accentColor};position: sticky;top: 100%;">
             <div style="display: flex;justify-content: space-between;align-items: center;max-width: 1800px;margin: 0 auto;width: 100%;">
-                <div style="font-size: 13px;color: {global:primaryColor};font-style: italic;font-weight: 500;">{global:wi_brand} - {global:footerTagline}</div>
+                <div style="font-size: 13px;color: {global:primaryColor};font-style: italic;font-weight: 500;">{global:api_brand} - {global:footerTagline}</div>
             </div>
         </footer>
     </body>
