--- a/cxone-work-item-form/to_host/work_item.html
+++ b/cxone-work-item-form/to_host/work_item.html
@@ -134,7 +134,7 @@
         </main>
         <footer style="background: #e8f0f6;padding: 16px 24px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);flex-shrink: 0;border-top: 3px solid {global:accentColor};position: sticky;top: 100%;">
             <div style="display: flex;justify-content: space-between;align-items: center;max-width: 1800px;margin: 0 auto;width: 100%;">
-                <div style="font-size: 13px;color: {global:primaryColor};font-style: italic;font-weight: 500;">{global:wi_brand} - {global:footerTagline}</div>
+                <div style="font-size: 13px;color: {global:primaryColor};font-style: italic;font-weight: 500;">{global:api_brand} - {global:footerTagline}</div>
             </div>
         </footer>
     </body>
