feat: add customer feeback cxone changes

--- a/cxone-web-customer-support-form/to_host/customer_feedback_form1.html
+++ b/cxone-web-customer-support-form/to_host/customer_feedback_form1.html
@@ -215,9 +215,9 @@
                                                     placeholder="Booking Number" />
                                             </div>
         
-                                            <div class="field" id="pccNameField">
+                                            <div class="field" id="transferToNameField">
                                                 <label for="transferTo">PCC name</label>
-                                                <input type="text" id="transferSearch" placeholder="Search agent..." />
+                                                <input type="text" id="transferSearch" placeholder="Search..." />
                                                 <div class="custom-select" id="transferDropdown">
                                                     <div class="options-list" id="transferOptions"></div>
                                                 </div>
@@ -273,7 +273,7 @@
                                             <input type="text" id="termSearch"
                                                 placeholder="Search or select terms..." />
                                             <div class="select-container" id="termsSelect">
-                                                <div class="select-box" id="selectedTags">
+                                                <div class="select-box" id="selectedTnCTags">
                                                 </div>
                                                 <div class="option-list" id="termOptions"></div>
                                             </div>
