--- a/cxone-web-customer-support-form/to_host/pcc_form.html
+++ b/cxone-web-customer-support-form/to_host/pcc_form.html
@@ -36,9 +36,9 @@
                             <input type="text" id="bookingNumber" placeholder="Booking Number" value="{global:cf_bookingNumber}" />
                         </div>
 
-                        <div class="field" id="pccNameField">
+                        <div class="field" id="transferToNameField">
                             <label for="transferTo">PCC name</label>
-                            <input type="text" id="transferSearch" placeholder="Search agent..." />
+                            <input type="text" id="transferSearch" placeholder="Search..." />
                             <div class="custom-select" id="transferDropdown">
                                 <div class="options-list" id="transferOptions"></div>
                             </div>
