--- a/cxone-web-customer-support-form/to_host/tnc_form.html
+++ b/cxone-web-customer-support-form/to_host/tnc_form.html
@@ -28,7 +28,7 @@
                         <label for="termsSelect">Terms & Conditions</label>
                         <input type="text" id="termSearch" placeholder="Search or select terms..." />
                         <div class="select-container" id="termsSelect">
-                            <div class="select-box" id="selectedTags">
+                            <div class="select-box" id="selectedTnCTags">
                             </div>
                             <div class="option-list" id="termOptions"></div>
                         </div>
