--- a/cxone-work-item-form/to_host/coachingRequest.html
+++ b/cxone-work-item-form/to_host/coachingRequest.html
@@ -15,7 +15,7 @@
                 </div>
                 <div style="position: relative;" hidden id="otherCoachingDetailsField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrOtherDetails">Other Coaching Details:</label>
-                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" placeholder="Enter other coaching details..." onchange="validateForm()" autocomplete="off"/>
+                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" maxlength="100" placeholder="Enter other coaching details..." onchange="validateForm()" autocomplete="off"/>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Message To Agent:</label>
