--- a/cxone-work-item-form/to_host/work_item.html
+++ b/cxone-work-item-form/to_host/work_item.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CWF Work Item Form - Holland America Line</title>
+        <title>Work Item Form - Holland America Line</title>
         <link rel="icon" href="../../assets/favicons/holland.png">
     </head>
 
